fix(blog): добавить z-index для кнопки закрытия модального окна

--- a/src/css/site/blog.css
+++ b/src/css/site/blog.css
@@ -193,6 +193,7 @@
     position: absolute;
     top: 24px;
     right: 24px;
+    z-index: 10;
     width: 40px;
     height: 40px;
     border-radius: 50%;
